@@ -1,3 +1,8 @@
+2005-02-02  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m.el (w3m-gmane-url-at-point): New function.
+	(w3m-url-at-point): Use it.
+
 2005-01-31  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>
 
 	* shimbun/sb-airs.el (shimbun-get-headers): Erase the work buffer
